# metal-softfloat

./: .gitignore  Cargo.toml  LICENSE-BSD-3-Clause  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: op_throughput.rs
docs/: ieee754_conformance.md
examples/: chain_sweep.rs  throughput_demo.rs
examples/standalone-msl/: README.md  kernel.metal
shaders/: softfloat.metal
src/: cpu.rs  gpu.rs  lib.rs  softfloat_ref.rs
tests/: dist_drift.rs  testfloat_conformance.rs  testfloat_gpu_conformance.rs
